fix text wrapping again

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -19,6 +19,7 @@ body {
 .gallery {
   position: relative;
   width: 380px;
+  border: 1px solid rgb(32, 32, 32);
   margin: 10px;
   float: left;
 }
